--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   <label><input type="checkbox" id="toggle-property" checked> Property Ownership</label>
   <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure</label>
 
-  <script src="script.js"></script>
+  <script src="Leaflet.js"></script>
 </body>
 </html>
