--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leaflet Interactive Map</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/Leaflet.css" />
-  <script src="https://unpkg.com/leaflet/dist/Leaflet.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <style>
     #map { width: 100%; height: 500px; }
   </style>
@@ -17,6 +17,6 @@
   <label><input type="checkbox" id="toggle-property" checked> Property Ownership</label>
   <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure</label>
 
-  <script src="Leaflet.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
