--- a/index.html
+++ b/index.html
@@ -4,102 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Leaflet Interactive Map</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+
   <style>
-    #map {
-      width: 100%;
-      height: 600px;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 10px;
-    }
-    .controls {
-      margin-top: 10px;
-    }
+    html, body { height: 100%; margin: 0; }
+    #map { width: 100%; height: 90vh; }
   </style>
 </head>
 <body>
-
-  <h2>Leaflet Interactive Map</h2>
   <div id="map"></div>
 
-  <div class="controls">
-    <label><input type="checkbox" id="toggle-property" checked /> Property Ownership</label>
-    <label><input type="checkbox" id="toggle-infrastructure" checked /> Infrastructure</label>
-  </div>
+  <label><input type="checkbox" id="toggle-property" checked> Property Ownership (WiFi)</label>
+  <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure (MiWay)</label>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // Initialize map
-    const map = L.map('map').setView([43.7, -79.4], 11); // Toronto area
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-    // Add OpenStreetMap tile layer
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Dummy GeoJSON layers
-    const propertyOwnershipLayer = L.geoJSON({
-      "type": "FeatureCollection",
-      "features": [
-        {
-          "type": "Feature",
-          "properties": { "name": "Property A" },
-          "geometry": {
-            "type": "Polygon",
-            "coordinates": [[
-              [-79.5, 43.7],
-              [-79.4, 43.7],
-              [-79.4, 43.8],
-              [-79.5, 43.8],
-              [-79.5, 43.7]
-            ]]
-          }
-        }
-      ]
-    }, { style: { color: 'blue', fillOpacity: 0.3 } });
-
-    const infrastructureLayer = L.geoJSON({
-      "type": "FeatureCollection",
-      "features": [
-        {
-          "type": "Feature",
-          "properties": { "name": "Infrastructure X" },
-          "geometry": {
-            "type": "LineString",
-            "coordinates": [
-              [-79.6, 43.72],
-              [-79.3, 43.76]
-            ]
-          }
-        }
-      ]
-    }, { style: { color: 'red' } });
-
-    // Add layers initially
-    propertyOwnershipLayer.addTo(map);
-    infrastructureLayer.addTo(map);
-
-    // Toggle layers based on checkboxes
-    document.getElementById('toggle-property').addEventListener('change', function () {
-      if (this.checked) {
-        propertyOwnershipLayer.addTo(map);
-      } else {
-        map.removeLayer(propertyOwnershipLayer);
-      }
-    });
-
-    document.getElementById('toggle-infrastructure').addEventListener('change', function () {
-      if (this.checked) {
-        infrastructureLayer.addTo(map);
-      } else {
-        map.removeLayer(infrastructureLayer);
-      }
-    });
-  </script>
+  <!-- App logic -->
+  <script src="script.js"></script>
 </body>
-</html>
-
 </html>
