--- a/index.html
+++ b/index.html
@@ -26,23 +26,22 @@
 
   <!-- Layer controls and style options -->
   <div class="controls">
-    <label><input type="checkbox" id="toggle-property" checked> Property Ownership (WiFi)</label>
-    <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure (MiWay)</label>
+    <label><input type="checkbox" id="toggle-property" checked>WiFi Locations</label>
+    <label><input type="checkbox" id="toggle-infrastructure" checked>MiWay Stops</label>
 
     <br><br>
 
     <label for="wifi-style-select">Style WiFi by:</label>
     <select id="wifi-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="SSID">SSID</option>
-      <option value="SignalStrength">Signal Strength</option>
+      <option value="DESCRIPT">SSID</option>
     </select>
 
     <label for="miway-style-select">Style MiWay by:</label>
     <select id="miway-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="ROUTE_NAME">Route Name</option>
-      <option value="ROUTE_TYPE">Route Type</option>
+      <option value="StopNumber">Route Name</option>
+      <option value="Route">Route Type</option>
     </select>
   </div>
 
