--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <label for="wifi-style-select">Style WiFi by:</label>
     <select id="wifi-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="DESCRIPT">SSID</option>
+      <option value="DESCRIPT">Description</option>
     </select>
 
     <label for="miway-style-select">Style MiWay by:</label>
     <select id="miway-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="StopNumber">Route Name</option>
-      <option value="Route">Route Type</option>
+      <option value="StopNumber">Stop Number</option>
+    <option value="Route">Route</option>
     </select>
   </div>
 
