--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     #map { width: 100%; height: 80vh; }
     .controls {
       padding: 10px;
+      background: #f9f9f9;
     }
     label, select {
       margin-right: 20px;
@@ -26,8 +27,8 @@
 
   <!-- Layer controls and style options -->
   <div class="controls">
-    <label><input type="checkbox" id="toggle-wifi" checked>WiFi Locations</label>
-    <label><input type="checkbox" id="toggle-transit" checked>MiWay Stops</label>
+    <label><input type="checkbox" id="toggle-wifi" checked> WiFi Locations</label>
+    <label><input type="checkbox" id="toggle-transit" checked> MiWay Stops</label>
 
     <br><br>
 
@@ -41,7 +42,7 @@
     <select id="miway-style-select">
       <option value="">-- Select Attribute --</option>
       <option value="StopNumber">Stop Number</option>
-    <option value="Route">Route</option>
+      <option value="Route">Route</option>
     </select>
   </div>
 
@@ -51,8 +52,7 @@
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- App logic -->
+  <!-- Your App Script -->
   <script src="script.js"></script>
 </body>
 </html>
-
