--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     #map { width: 100%; height: 80vh; }
     .controls {
       padding: 10px;
-      background: #f9f9f9;
     }
     label, select {
       margin-right: 20px;
@@ -27,22 +26,23 @@
 
   <!-- Layer controls and style options -->
   <div class="controls">
-    <label><input type="checkbox" id="toggle-wifi" checked> WiFi Locations</label>
-    <label><input type="checkbox" id="toggle-transit" checked> MiWay Stops</label>
+    <label><input type="checkbox" id="toggle-property" checked> Property Ownership (WiFi)</label>
+    <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure (MiWay)</label>
 
     <br><br>
 
     <label for="wifi-style-select">Style WiFi by:</label>
     <select id="wifi-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="DESCRIPT">Description</option>
+      <option value="SSID">SSID</option>
+      <option value="SignalStrength">Signal Strength</option>
     </select>
 
     <label for="miway-style-select">Style MiWay by:</label>
     <select id="miway-style-select">
       <option value="">-- Select Attribute --</option>
-      <option value="StopNumber">Stop Number</option>
-      <option value="Route">Route</option>
+      <option value="ROUTE_NAME">Route Name</option>
+      <option value="ROUTE_TYPE">Route Type</option>
     </select>
   </div>
 
@@ -52,7 +52,7 @@
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Your App Script -->
+  <!-- App logic -->
   <script src="script.js"></script>
 </body>
 </html>
