--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <!-- Layer controls and style options -->
   <div class="controls">
-    <label><input type="checkbox" id="toggle-property" checked> Property Ownership (WiFi)</label>
-    <label><input type="checkbox" id="toggle-infrastructure" checked> Infrastructure (MiWay)</label>
+    <label><input type="checkbox" id="toggle-wifi" checked> WiFi Locations</label>
+    <label><input type="checkbox" id="toggle-transit" checked> MiWay Stops</label>
 
     <br><br>
 
