--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Leaflet Map Toggle Example</title>
+  <title>Leaflet Layer Toggle Map</title>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
+    html, body { height: 100%; margin: 0; }
     #map { width: 100%; height: 90vh; }
     .controls {
       padding: 10px;
-      background: #f9f9f9;
+      background-color: #f2f2f2;
     }
   </style>
 </head>
