--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Leaflet Measure CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet-measure/dist/leaflet-measure.css" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Leaflet Interactive Map</title>
@@ -39,5 +43,8 @@
 
   <!-- App logic -->
   <script src="script.js"></script>
+  <!-- Leaflet Measure JS -->
+<script src="https://unpkg.com/leaflet-measure/dist/leaflet-measure.min.js"></script>
+
 </body>
 </html>
